--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "sensio/framework-extra-bundle": "~3.0",
         "incenteev/composer-parameter-handler": "~2.0",
 		"sensio/generator-bundle": "~2.3",
-		"symfony/finder": "2.3.*"
+		"symfony/finder": "2.3.*",
+        "ext-intl": "*"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
